--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -45,3 +45,9 @@ body{
     width: 100%;
     justify-content: space-between;
 }
+
+.modal-content {
+    background-color: rgb(38,39,45);
+    color: white;
+}
+
